hr-tecs/tecsgen/test/result-normal.txt
~/shirata_tecsgen/test/sample/data-normal ~/shirata_tecsgen/test
##### tecsgen normal-1.idl  #####
~/shirata_tecsgen/test
~/shirata_tecsgen/test/sample/data-normal ~/shirata_tecsgen/test
##### tecsgen normal-2.idl  #####
~/shirata_tecsgen/test
~/shirata_tecsgen/test/sample/data-flat ~/shirata_tecsgen/test
##### tecsgen jsp_flat.sig.CPP sample1_flat.blt.CPP sample1_flat.ct.CPP  #####
jsp_flat.sig.CPP:146:13: error: G1016 'bool' 付近の構文エラーです
sample1_flat.blt.CPP:67:18: error: S1027 セルタイプ 'tTexHdrMain' が見つかりません
sample1_flat.blt.CPP:71:14: error: S1027 セルタイプ 'tTexHdr' が見つかりません
sample1_flat.blt.CPP:75:16: error: S1027 セルタイプ 'tTaskMain' が見つかりません
sample1_flat.blt.CPP:85:12: error: S1027 セルタイプ 'tTask' が見つかりません
sample1_flat.blt.CPP:95:16: error: S1027 セルタイプ 'tTaskMain' が見つかりません
sample1_flat.blt.CPP:103:12: error: S1027 セルタイプ 'tTask' が見つかりません
sample1_flat.blt.CPP:115:12: error: S1027 セルタイプ 'tTask' が見つかりません
sample1_flat.blt.CPP:127:12: error: S1027 セルタイプ 'tTask' が見つかりません
sample1_flat.blt.CPP:139:18: error: S1027 セルタイプ 'tCycHdrMain' が見つかりません
sample1_flat.blt.CPP:144:14: error: S1027 セルタイプ 'tCycHdr' が見つかりません
sample1_flat.blt.CPP:148:18: error: S1027 セルタイプ 'tExcHdrMain' が見つかりません
sample1_flat.blt.CPP:152:14: error: S1027 セルタイプ 'tExcHdr' が見つかりません
sample1_flat.ct.CPP:18:19: error: G1016 'TEXPTN' 付近の構文エラーです
14 errors
~/shirata_tecsgen/test
